# moss_fsm_adapter

./: .gitignore  Dockerfile  FSM_classification.ipynb  README.md  Untitled.ipynb  convert_data.sc  main.py  manifest  moss.sub  preprocess_data.ipynb  pyproject.toml  requirements.txt  run.sh
docs/: command-line.md  output-file.md
moleculenet/: processed.smi
moss/: CnFBreadth1.java  Ctab.java  Edge.java  EdgePatternMgr.java  Fragment.java  FreeTypeMgr.java  Graph.java  GraphReader.java  GraphWriter.java  MoleculeNtn.java  NEList.java  NEListWriter.java  Node.java  OverlapGraph.java  Predictor.java  Recoder.java  SDfileReader.java  SDfileWriter.java  TableReader.java
moss/moss/: AtomTypeMgr.java  BondTypeMgr.java  CanonicalForm.java  CnFBreadth2.java  CnFDepth.java  Embedding.java  ExtMgr.java  FreeNtn.java  LiNoG.java  LineReader.java  LineWriter.java  Miner.java  MoSS.java  MoSSTable.java  NEListReader.java  NamedGraph.java  Notation.java  SLN.java  SMILES.java  TableWriter.java  TypeMgr.java  run
presentation/: mkslides.yml  slides.md
presentation/site/: index.html
report/: report.md
